added vector api